--- a/drivetome-manager-page/package.json
+++ b/drivetome-manager-page/package.json
@@ -27,20 +27,20 @@
     "angular-bootstrap-md": "^4.3.7",
     "angular-material-time-picker": "^1.0.7",
     "bootstrap": "^4.0.0-beta.2",
-    "chart.js": "^2.5.0",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
-    "devextreme": "^17.1.8",
-    "devextreme-angular": "^17.1.7",
+    "devextreme": "^17.2.3",
+    "devextreme-angular": "^17.2.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng-material-datetimepicker": "^1.9.6",
-    "primeng": "^5.0.0-rc.0",
+    "primeng": "^5.0.0",
     "rtlbootstrap": "^4.0.0-alpha.8.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.0",
+    "@angular/cli": "^1.5.3",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
