--- a/drivetome-manager-page/package.json
+++ b/drivetome-manager-page/package.json
@@ -20,6 +20,7 @@
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
     "@angular/material": "^2.0.0-beta.12",
+    "@angular/material-moment-adapter": "^5.0.0-rc0",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
@@ -33,6 +34,7 @@
     "devextreme-angular": "^17.2.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.19.2",
     "ng-material-datetimepicker": "^1.9.6",
     "primeng": "^5.0.0",
     "rtlbootstrap": "^4.0.0-alpha.8.1",
